# CountdownNumberSearch

./: CMakeLists.txt  README.md  main.cpp
headers/: CountdownAliases.h  ExpressionEvaluator.h  PermutationCalculator.h  PermutationResult.h  ResultsGenerator.h  SimpleMathOps.h  VectorUtil.h
headers/types/: EvaluationResult.h  Permutation.h  PermutationList.h
headers/typetraits/: CountdownTraits.h
headers/util/: CMathParser.h
sources/: ExpressionEvaluator.cpp  PermutationCalculator.cpp  PermutationResult.cpp  ResultsGenerator.cpp  SimpleMathOps.cpp  VectorUtil.cpp
sources/types/: EvaluationResult.cpp  PermutationList.cpp
sources/util/: CMathParser.cpp  VectorUtil.cpp
